maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:8: error: value -= is not a member of Int
	sommeAngle -=
                   ^