maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
	var sommeAngle:Int = 0
	while (!estFaceMur()) {
		avance();
	}
	droite();
	sommeAngle -=

	while (!estSurBiscuit()) {
		if (getDirection() != Direction.NORD) {
			gauche();
			if (estFaceMur()) {
				while (estFaceMur()) {
					droite();
				}
				avance();
			} else {
				avance();
			}
		} else if (getDirection() == Direction.NORD) {
		 	while(!estFaceMur) {
		 		avance();
		 	}
		 	droite();
			}
	}
	prendBiscuit();
}
